<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.profile.ProfileActivity">

    <ImageView
        android:id="@+id/imgApp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_image"
        app:layout_constraintBottom_toTopOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_simform" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgApp" />

    <TextView
        android:id="@+id/txtUsernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/txtNameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/test"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/txtUsernameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/txtUsernameTitle"
        app:layout_constraintTop_toTopOf="@id/txtUsernameTitle" />

    <TextView
        android:id="@+id/txtNameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/txtSurnameTitle"
        app:layout_constraintEnd_toEndOf="@id/txtUsernameTitle"
        app:layout_constraintStart_toStartOf="@id/txtUsernameTitle"
        app:layout_constraintTop_toBottomOf="@id/txtUsernameTitle" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/txtNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/txtUsername"
        app:layout_constraintTop_toTopOf="@id/txtNameTitle" />

    <TextView
        android:id="@+id/txtSurnameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/surname"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnEditProfile"
        app:layout_constraintEnd_toEndOf="@id/txtNameTitle"
        app:layout_constraintStart_toStartOf="@id/txtNameTitle"
        app:layout_constraintTop_toBottomOf="@id/txtNameTitle" />

    <TextView
        android:id="@+id/txtSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/txtSurnameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/txtUsername"
        app:layout_constraintTop_toTopOf="@id/txtSurnameTitle" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSurnameTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>